Create a nugget package#2
Renamed Solution and project, to have a unique nuggetPackageID, and set up Project settings for Nugget.
Sent in Package for review

--- a/Utilities/Clinton.Utility.Rest.csproj
+++ b/Utilities/Clinton.Utility.Rest.csproj
@@ -6,6 +6,8 @@
     <Nullable>enable</Nullable>
     <RunAnalyzersDuringLiveAnalysis>False</RunAnalyzersDuringLiveAnalysis>
     <AnalysisLevel>latest-recommended</AnalysisLevel>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Authors>Clinton le Roux</Authors>
   </PropertyGroup>
 
   <ItemGroup>
